# redrock

./: .gitignore  Cargo.toml  README.md  config.toml  controls.toml
maps/: axis.blend  axis.gltf  ball.blend  ball.gltf  cube.blend  cube.gltf  default_bump.tif  default_diffuse.tif  example.toml  groundtile.tif  groundtile_bump.tif  tree.blend  tree.gltf
src/: main.rs
src/config/: mod.rs
src/game/: actions.rs  gamestate.rs  mod.rs
src/game/physics/: collider.rs  fixed_plane.rs  mod.rs  sphere.rs
src/game/state/: camera_state.rs  game_state.rs  mod.rs  object_state.rs  physics_state.rs  player_control.rs  transform.rs
src/game/tags/: globals.rs  mod.rs  object.rs  physics.rs  scenario.rs
src/input/: mod.rs
src/math/: euler.rs  geo.rs  matrix.rs  mod.rs  quaternion.rs  vec.rs
src/render/: common.rs  gpu_types.rs  mod.rs  model.rs  model_pass.rs  model_shader.wgsl  post_pass.rs  post_shader.wgsl  renderer.rs  shader.wgsl  texture.rs  window.rs
src/tags/: mod.rs  object.rs
src/util/: mod.rs  ringbuffer.rs  saltybuffer.rs
