[package]
name = "redrock"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
wgpu = "0.14.2"
winit = "0.27"
pollster = "0.2.0"
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5"
gltf = { version = "1.0.0", features = ["utils"] }
cgmath = { version = "0.18.0", features = ["swizzle"]}
env_logger = "0.9"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "tiff"]
